--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "jsx": "react",//开启 JSX 支持
     "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
@@ -16,7 +17,9 @@
       "ES5",
       "ES6",
       "ES7"
-    ]
+    ],
+    "forceConsistentCasingInFileNames": true, // 添加此行
+    "strict": true // 添加此行
   },
   "include": [
     "**/*.ts"
